# cpp_temp

./: .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt
assets/: TiendaCPP.glade  TiendaCPP.glade~
source/: main.cpp
